--- a/new_arch/env/os.env
+++ b/new_arch/env/os.env
@@ -5,8 +5,8 @@
 
 #
 # This configfile genarated :
-#   by ./mkenv LXa 0 jboss
-#   at 2017-0106-1918-22
+#   by ./mkenv LXa 0
+#   at 2017-0107-1131-37
 #
 
 OS_USER_NAME="LXaOU";
