--- a/new_arch/env/jboss.env
+++ b/new_arch/env/jboss.env
@@ -5,8 +5,8 @@
 
 #
 # This configfile genarated :
-#   by ./mkenv LXa 0 jboss
-#   at 2017-0106-1918-23
+#   by ./mkenv LXa 0
+#   at 2017-0107-1131-37
 #
 
 ##############################
@@ -47,7 +47,7 @@ JBOSS_CONFIG_NAME="standalone.xml";
 #
 # JAVA
 #
-JBOSS_JAVA_HOME=/usr/lib/jvm/java-1.8.0-openjdk-1.8.0.102-4.b14.el7.x86_64/jre
+JBOSS_JAVA_HOME=/usr/lib/jvm/java-1.8.0-openjdk-1.8.0.111-2.b15.el7_3.x86_64/jre
 
 # JBOSS_JAVA_OPTS="-Xms512m -Xmx512m -XX:MaxMetaspaceSize=256m"; # STD doc.
 JBOSS_JAVA_OPTS="-Xms128m -Xmx256m -XX:MaxMetaspaceSize=128m"; # my TEST
