--- a/new_arch/env/systemctl.jboss.env
+++ b/new_arch/env/systemctl.jboss.env
@@ -5,8 +5,8 @@
 
 #
 # This configfile genarated :
-#   by ./mkenv LXa 0 jboss
-#   at 2017-0106-1918-23
+#   by ./mkenv LXa 0
+#   at 2017-0107-1131-37
 #
 
 ##############################
