--- a/env.base/rule.env
+++ b/env.base/rule.env
@@ -3,10 +3,10 @@
 # OS USER / GROUP
 #######################
 
-OS_USER_ID_BASE=1000;
+OS_USER_ID_BASE=5000;
 OS_USER_ID_OFFSET=100;
-OS_GROUP_ID_BASE=1000;
-OS_GROUP_ID_OFFSET=100;
+OS_GROUP_ID_BASE=$OS_USER_ID_BASE
+OS_GROUP_ID_OFFSET=$OS_USER_ID_OFFSET
 
 #######################
 # HTTPD
