delete Header symbole

--- a/common.env
+++ b/common.env
@@ -1,12 +1,5 @@
 #
-# $Header: /home/hmizuno/opens/CVSrepo/multi_instance/functions.sh,v 1.1.1.1 2016/12/24 12:16:09 hmizuno Exp $
-# $Id: functions.sh,v 1.1.1.1 2016/12/24 12:16:09 hmizuno Exp $
-#
-
-#
-# This configfile genarated :
-#   by __HEADER_SCRIPT__ __HEADER_ARGS__
-#   at __HEADER_DATE__
+# common.env : common environment file
 #
 
 # project name
@@ -15,9 +8,11 @@ PROJ_NAME=jast
 #ARCHIVE_DIR="../archive"
 ARCHIVE_DIR=${ARCHIVE_DIR:="/home/hmizuno/work/archive/"}
 
-TOOL_HOME=${TOOL_HOME:="/home/hmizuno/work/git/installer/new_arch"}
-
-TOOL_BIN=$TOOL_HOME/bin
+#
+# future config
+#
+# TOOL_HOME=${TOOL_HOME:="/home/hmizuno/work/git/installer/new_arch"}
+# TOOL_BIN=$TOOL_HOME/bin
 
 OUTPUT_DIR=${OUTPUT_DIR:="./output"}
 
