add: 	common.h: check_java() 	common.h: check_enforce()
	common.env: set -eu
	common.env: WORK_DIR env

del:
	httpdctl: apache version

--- a/common.env
+++ b/common.env
@@ -2,10 +2,18 @@
 # common.env : common environment file
 #
 
+set -eu #  # abort when error occured and undefined environment
+
 # project name
 PROJ_NAME=jast
 
-#ARCHIVE_DIR="../archive"
+# work directory for this scripts
+WORK_DIR=${WORK_DIR:="/tmp"};
+
+#
+# archive directory for install
+#
+##### CAUTION : can NOT use $WORK_DIR directory !!!!! #####
 ARCHIVE_DIR=${ARCHIVE_DIR:="/home/hmizuno/work/archive/"}
 
 #
@@ -13,10 +21,9 @@ ARCHIVE_DIR=${ARCHIVE_DIR:="/home/hmizuno/work/archive/"}
 #
 # TOOL_HOME=${TOOL_HOME:="/home/hmizuno/work/git/installer/new_arch"}
 # TOOL_BIN=$TOOL_HOME/bin
+# PATH=$TOOL_BIN:$PATH
 
 OUTPUT_DIR=${OUTPUT_DIR:="./output"}
 
 DATE_TIME_FMT="+%Y-%m%d-%H%M-%S";
-
-PATH=$TOOL_BIN:$PATH
 
