--- a/common.env
+++ b/common.env
@@ -24,6 +24,22 @@ ARCHIVE_DIR=${ARCHIVE_DIR:="/home/hmizuno/work/archive/"}
 # PATH=$TOOL_BIN:$PATH
 
 OUTPUT_DIR=${OUTPUT_DIR:="./output"}
+SCRIPT_DIR=${SCRIPTS_DIR:=./script}
 
 DATE_TIME_FMT="+%Y-%m%d-%H%M-%S";
+
+#
+# httpd/jboss instance list
+#
+INSTANCE_LIST="LXa LEa LJa LVa SDa BPa LXb LJb LVb SDb BPb";
+
+#
+# firewalld base configuration
+#
+# defined in /usr/lib/firewalld/services/ directory
+FIREWALL_BASE_CONF_AP="ftp ssh dns ntp https ldap ldaps";
+FIREWALL_BASE_CONF_DB="ftp ssh dns ntp ldap ldaps postgresql";
+FIREWALL_BASE_CONF_COMMON="ftp ssh dns ntp ldap ldaps";
+FIREWALL_BASE_CONF_DIR="/usr/lib/firewalld/services";
+FIREWALL_CONF_DIR="/etc/firewalld/services";
 
