add : 	firewall for httpd / jboss

--- a/env.base/rule.env
+++ b/env.base/rule.env
@@ -12,3 +12,20 @@ OS_GROUP_ID_OFFSET=$OS_USER_ID_OFFSET
 # HTTPD
 #######################
 
+#######################
+# JBoss
+#######################
+
+JBOSS_PORT_OFFSET_BASE_OFFSET=100
+
+JBOSS_PORT_AJP_DEF=8009
+JBOSS_PORT_HTTP_DEF=8080
+JBOSS_PORT_HTTPS_DEF=8443
+JBOSS_PORT_JACORB_DEF=3528
+JBOSS_PORT_JACORB_SSL_DEF=3529
+JBOSS_PORT_MESSAGING_DEF=9876
+JBOSS_PORT_TXN_RECOVERY_DEF=4712
+JBOSS_PORT_TXN_STATUS_DEF=4713
+JBOSS_PORT_MANAGE_HTTP_DEF=9990
+JBOSS_PORT_MANAGE_HTTPS_DEF=9993
+
