--- a/common.env
+++ b/common.env
@@ -37,9 +37,9 @@ INSTANCE_LIST="LXa LEa LJa LVa SDa BPa LXb LJb LVb SDb BPb";
 # firewalld base configuration
 #
 # defined in /usr/lib/firewalld/services/ directory
-FIREWALL_BASE_CONF_AP="ftp ssh dns ntp https ldap ldaps";
-FIREWALL_BASE_CONF_DB="ftp ssh dns ntp ldap ldaps postgresql";
-FIREWALL_BASE_CONF_COMMON="ftp ssh dns ntp ldap ldaps";
+FIREWALL_BASE_CONF_AP="ftp ssh";
+FIREWALL_BASE_CONF_DB="ftp ssh nfs postgresql";
+FIREWALL_BASE_CONF_COMMON="ftp ssh";
 FIREWALL_BASE_CONF_DIR="/usr/lib/firewalld/services";
 FIREWALL_CONF_DIR="/etc/firewalld/services";
 
