add : 	README.txt : add firewall check command 	common.env : add HOME_BASE_DIR env 	mkfirewall.controle.base : add reload command
FIX :
	usergroupctl-all :
		error : can't create home dir when useradd at first time.
		fix : mkdir -p $HOME_BASE_DIR

	error : firewall-cmd --add-services -> INVALID_SERVICE
	fix : execut "firewall-cmd --reload" before "--add-service".
		common.h : add firewall reload command

change :
	conf.base/jboss/jboss.xml.BASE : remove NO use port config
	mkall : archive() : add code for checking duplicate run.

--- a/common.env
+++ b/common.env
@@ -6,6 +6,7 @@ set -eu #  # abort when error occured and undefined environment
 
 # project name
 PROJ_NAME=jast
+HOME_BASE_DIR="/$PROJ_NAME/home";
 
 # work directory for this scripts
 WORK_DIR=${WORK_DIR:="/tmp"};
