add tools : 	dbtools/ .... database tools. 	fwctl ....... fierwall controle script
change :
	add env.
		DB_INSTANCE_LIST
		PG_ADMIN_PASSWORD
		PG_DB_USER_PASSWORD
	add func:
		$ ./httpdctl fwsetup;
		$ ./httpdctl fwclean;

		$ ./jbossctl fwsetup;
		$ ./jbossctl fwclean;

--- a/common.env
+++ b/common.env
@@ -2,7 +2,7 @@
 # common.env : common environment file
 #
 
-set -eu #  # abort when error occured and undefined environment
+#set -eu #  # abort when error occured and undefined environment
 
 # project name
 PROJ_NAME=jast
@@ -43,4 +43,11 @@ FIREWALL_BASE_CONF_DB="ftp ssh nfs postgresql";
 FIREWALL_BASE_CONF_COMMON="ftp ssh";
 FIREWALL_BASE_CONF_DIR="/usr/lib/firewalld/services";
 FIREWALL_CONF_DIR="/etc/firewalld/services";
+
+#
+# PostgreSQL
+#
+DB_INSTANCE_LIST="$INSTANCE_LIST MGx"
+PG_ADMIN_PASSWORD=password
+PG_DB_USER_PASSWORD=password
 
