add : 	prepare script: do the following 		make environmant file 		make config file 		make firewall script (OS, httpd, jboss) 		make setup package for DB/BATCH server 	logging func: 		message()
change :
	message & log & error fmt etc....

--- a/common.env
+++ b/common.env
@@ -2,6 +2,7 @@
 # common.env : common environment file
 #
 
+set -e #  # abort when error occured and undefined environment
 #set -eu #  # abort when error occured and undefined environment
 
 # project name
@@ -18,21 +19,38 @@ WORK_DIR=${WORK_DIR:="/tmp"};
 ARCHIVE_DIR=${ARCHIVE_DIR:="/home/hmizuno/work/archive/"}
 
 #
-# future config
+# top directory of all instance
 #
-# TOOL_HOME=${TOOL_HOME:="/home/hmizuno/work/git/installer/new_arch"}
-# TOOL_BIN=$TOOL_HOME/bin
-# PATH=$TOOL_BIN:$PATH
-
-OUTPUT_DIR=${OUTPUT_DIR:="./output"}
-SCRIPT_DIR=${SCRIPTS_DIR:=./script}
-
-DATE_TIME_FMT="+%Y-%m%d-%H%M-%S";
+#   <INSTANCE_DIR>/
+#       <instance_1>/
+#           env/
+#           conf/
+#       <instance_2>/....
+#
+INSTANCE_DIR=${INSTANCE_DIR:="./output"}
 
 #
 # httpd/jboss instance list
 #
 INSTANCE_LIST="LXa LEa LJa LVa SDa BPa LXb LJb LVb SDb BPb";
+
+#
+# script directory for firewall and postgresql
+#
+#   <SCRIPT_DIR>/
+#       	fw/
+#       	db/
+#
+SCRIPT_DIR=${SCRIPTS_DIR:=./script}
+FW_SCRIPT_DIR=${FW_SCRIPTS_DIR:=$SCRIPT_DIR/fw}
+DB_SCRIPT_DIR=${DB_SCRIPTS_DIR:=$SCRIPT_DIR/db}
+
+#
+# PostgreSQL
+#
+DB_INSTANCE_LIST="$INSTANCE_LIST MGx"
+PG_ADMIN_PASSWORD=password
+PG_DB_USER_PASSWORD=password
 
 #
 # firewalld base configuration
@@ -45,9 +63,14 @@ FIREWALL_BASE_CONF_DIR="/usr/lib/firewalld/services";
 FIREWALL_CONF_DIR="/etc/firewalld/services";
 
 #
-# PostgreSQL
+# date time format for date command
 #
-DB_INSTANCE_LIST="$INSTANCE_LIST MGx"
-PG_ADMIN_PASSWORD=password
-PG_DB_USER_PASSWORD=password
+DATE_TIME_FMT="+%Y-%m%d-%H%M-%S";
+
+#
+# future config
+#
+# TOOL_HOME=${TOOL_HOME:="/home/hmizuno/work/git/installer/new_arch"}
+# TOOL_BIN=$TOOL_HOME/bin
+# PATH=$TOOL_BIN:$PATH
 
