change : 	update README.txt 	env.base/jboss.env.BASE 		change env name and definition : 			JBOSS_DS_* --> JBOSS_DB_* 	definition place of JBOSS_DB_SERVER_NAME: 		mkenv --> jboss.env.BASE
add :
	add environamet into "common.env"
		PG_SERVER_NAME
		PG_SERVER_PORT

--- a/common.env
+++ b/common.env
@@ -49,7 +49,9 @@ DB_SCRIPT_DIR=${DB_SCRIPTS_DIR:=$SCRIPT_DIR/db}
 # PostgreSQL
 #
 DB_INSTANCE_LIST="$INSTANCE_LIST MGx"
-PG_ADMIN_PASSWORD=password
+PG_SERVER_NAME=127.0.0.1
+PG_SERVER_PORT=5432
+#NOUSE# PG_ADMIN_PASSWORD=password
 PG_DB_USER_PASSWORD=password
 
 #
