change : 	NOSTOP env : no "set -e" flag
add :
	SHDEBUG env : set -x flag
	*_PASSWORD_DEF : default password section in common.env and ../common_static.env

--- a/common.env
+++ b/common.env
@@ -2,12 +2,15 @@
 # common.env : common environment file
 #
 
-#OFF# set -x # for DEBUG
-
-if [ ! -n "$IGNORE_ERROR" ]
+if [ ! -n "$NOSTOP" ]
 then
 	set -e #  # abort when error occured and undefined environment
 	#set -eu #  # abort when error occured and undefined environment
+fi
+
+if [ ! -n "$SHDEBUG" ]
+then
+	set -x # shell script debug
 fi
 
 COMMON_STACIC_ENV="../common_static.env"
@@ -16,23 +19,32 @@ then
 	.  "$COMMON_STACIC_ENV"
 fi
 
-#
+#--------------------------------
 # project
 #
 PROJ_NAME=${PROJ_NAME:=myproj}
 PROJ_OS_ADMIN_NAME=${PROJ_OS_ADMIN_NAME:=${PROJ_NAME}admin}
 HOME_BASE_DIR=${HOME_BASE_DIR:="/$PROJ_NAME/home"}
 
+#--------------------------------
 # work directory for this scripts
 WORK_DIR=${WORK_DIR:="/tmp"};
 
-#
+#--------------------------------
 # archive directory for install
 #
 ##### CAUTION : can NOT use $WORK_DIR directory !!!!! #####
 ARCHIVE_DIR=${ARCHIVE_DIR:="/home/hmizuno/work/archive/"}
 
+#--------------------------------
+# password
 #
+OS_USER_PASSWORD_DEF=${OS_USER_PASSWORD_DEF:="ospass"}
+JBOSS_USER_PASSWORD_DEF=${JBOSS_USER_PASSWORD_DEF:="jbosspass"}
+JBOSS_ADMIN_PASSWORD_DEF=${JBOSS_ADMIN_PASSWORD_DEF:="adminpass"}
+PG_DB_USER_PASSWORD_DEF=${PG_DB_USER_PASSWORD_DEF:="pgpass"}
+
+#--------------------------------
 # top directory of all instance
 #
 #   <INSTANCE_DIR>/
@@ -43,17 +55,17 @@ ARCHIVE_DIR=${ARCHIVE_DIR:="/home/hmizuno/work/archive/"}
 #
 INSTANCE_DIR=${INSTANCE_DIR:="./output"}
 
-#
+#--------------------------------
 # httpd/jboss instance list
 #
 INSTANCE_LIST=${INSTANCE_LIST:="INST1 INST2"}
 
-#
+#--------------------------------
 # DB database list on single instance
 #
 DB_INSTANCE_LIST=${DB_INSTANCE_LIST:="$INSTANCE_LIST INST3"}
 
-#
+#-----------------------------------------------
 # script directory for firewall and postgresql
 #
 #   <SCRIPT_DIR>/
@@ -112,7 +124,7 @@ HTTPD_PORT_HTTPS_BASE="( $HTTPD_PORT_HTTPS_DEF + $HTTPD_PORT_OFFSET )"
 #######################
 PG_SERVER_NAME=127.0.0.1
 PG_SERVER_PORT=5432
-PG_DB_USER_PASSWORD=password
+PG_DB_USER_PASSWORD="$PG_DB_USER_PASSWORD_DEF"
 
 #
 # firewalld base configuration
