--- a/common.env
+++ b/common.env
@@ -8,7 +8,7 @@ then
 	#set -eu #  # abort when error occured and undefined environment
 fi
 
-if [ ! -n "$SHDEBUG" ]
+if [ -n "$SHDEBUG" ]
 then
 	set -x # shell script debug
 fi
