add : 	JBOSS_ADMIN_DEF : JBoss admin user default name

--- a/common.env
+++ b/common.env
@@ -41,6 +41,7 @@ ARCHIVE_DIR=${ARCHIVE_DIR:="/home/hmizuno/work/archive/"}
 #
 OS_USER_PASSWORD_DEF=${OS_USER_PASSWORD_DEF:="ospass"}
 JBOSS_USER_PASSWORD_DEF=${JBOSS_USER_PASSWORD_DEF:="jbosspass"}
+JBOSS_ADMIN_DEF=${JBOSS_ADMIN_DEF:="jbossadmin"}
 JBOSS_ADMIN_PASSWORD_DEF=${JBOSS_ADMIN_PASSWORD_DEF:="adminpass"}
 PG_DB_USER_PASSWORD_DEF=${PG_DB_USER_PASSWORD_DEF:="pgpass"}
 
@@ -91,7 +92,7 @@ OS_GROUP_ID_OFFSET=$OS_USER_ID_OFFSET
 #
 # JBossPort# = JBOSS_PORT_*_DEF
 #            + JBOSS_PORT_BASE_OFFSET
-#            + ( JBOSS_PORT_OFFSET_BASE_OFFSET X n )
+#            + ( JBOSS_PORT_OFFSET_BASE_OFFSET * (n + 1))
 #
 # *_DEF :   AJP_DEF, HTTP_DEF, ***_DEF
 # n = 0 ... number of instance
