rename : 	output/ --> repo/ 	INSTANCE_DIR -> REPO_DIR 	./prepare -> ./mkrepo

--- a/common.env
+++ b/common.env
@@ -48,13 +48,13 @@ PG_DB_USER_PASSWORD_DEF=${PG_DB_USER_PASSWORD_DEF:="pgpass"}
 #--------------------------------
 # top directory of all instance
 #
-#   <INSTANCE_DIR>/
+#   <
 #       <instance_1>/
 #           env/
 #           conf/
 #       <instance_2>/....
 #
-INSTANCE_DIR=${INSTANCE_DIR:="./output"}
+REPO_DIR=${REPO_DIR:="./repo"}
 
 #--------------------------------
 # httpd/jboss instance list
