change : 	add UTF-8 commnet

--- a/common.env
+++ b/common.env
@@ -4,25 +4,42 @@
 
 if [ ! -n "$NOSTOP" ]
 then
-	set -e #  # abort when error occured and undefined environment
-	#set -eu #  # abort when error occured and undefined environment
+	set -e # エラー発生時にスクリプトを停止
+	       # NOSTOPを設定するとエラー発生しても、実行を続行する。
 fi
 
 if [ -n "$SHDEBUG" ]
 then
-	set -x # shell script debug
-fi
-
-COMMON_STACIC_ENV="../common_static.env"
-if [ -s "$COMMON_STACIC_ENV" ]
-then
-	.  "$COMMON_STACIC_ENV"
+	set -x # スクリプトのデバッグオプション
 fi
 
 #--------------------------------
-# project
+# 
+# デフォルト値設定ファイルの読み込み順番
+# (最初に設定・読み込まれた値が優先される。）
 #
-PROJ_NAME=${PROJ_NAME:=myproj}
+# DEF_ENV=val ./command # 実行時に環境変数で指定
+# ../common_static.env	# 実行環境固有のデフォルト値を設定
+# ./common_static.env	# 実行環境固有のデフォルト値を設定
+# ./common.env		# ツールのデフォルト値を設定
+#
+# デフォルト値：
+#	本スクリプト（common.env）にて、下記形式で設定されている環境変数は、
+#	実行時もしくはcommon_staic.envにて上書き設定することが可能
+#
+#	上書き設定する場合は、以下の"default_value"に値を設定する。
+#
+#	FOO_DEF=${FOO_DEF:="default_value"}
+#
+COMMON_STACIC_ENV="../common_static.env"
+[ -s "$COMMON_STACIC_ENV" ] && . "$COMMON_STACIC_ENV"
+COMMON_STACIC_ENV="common_static.env"
+[ -s "$COMMON_STACIC_ENV" ] && . "$COMMON_STACIC_ENV"
+
+#--------------------------------
+# プロジェクト名定義
+#
+PROJ_NAME=${PROJ_NAME:="myproj"}
 PROJ_OS_ADMIN_NAME=${PROJ_OS_ADMIN_NAME:=${PROJ_NAME}admin}
 HOME_BASE_DIR=${HOME_BASE_DIR:="/$PROJ_NAME/home"}
 
@@ -33,16 +50,32 @@ WORK_DIR=${WORK_DIR:="/tmp"};
 #--------------------------------
 # archive directory for install
 #
-##### CAUTION : can NOT use $WORK_DIR directory !!!!! #####
+##### 注意：　ARCHIVE_DIRは、WORK_DIRと違うディレクトリに設定すること。#####
 ARCHIVE_DIR=${ARCHIVE_DIR:="/home/hmizuno/work/archive/"}
+
+if [ "$WORK_DIR" = "$ARCHIVE_DIR" ]
+then
+	set +e
+	echo "ERROR: WORK_DIRとARCHIVE_DIRには、異なるディレクトリ名を指定してください。"
+	echo "       WORK_DIR : "$WORK_DIR"
+	echo "       ARCHIVE_DIR : "$ARCHIVE_DIR"
+	exit 1;
+fi
 
 #--------------------------------
 # password
 #
+
+# OS user共通パスワードの設定
 OS_USER_PASSWORD_DEF=${OS_USER_PASSWORD_DEF:="ospass"}
+
+# JBoss管理ユーザ共通パスワードの設定
 JBOSS_USER_PASSWORD_DEF=${JBOSS_USER_PASSWORD_DEF:="jbosspass"}
-JBOSS_ADMIN_DEF=${JBOSS_ADMIN_DEF:="jbossadmin"}
-JBOSS_ADMIN_PASSWORD_DEF=${JBOSS_ADMIN_PASSWORD_DEF:="adminpass"}
+
+# JBoss共通管理ユーザ名の設定
+JBOSS_ADMIN_DEF=${JBOSS_ADMIN_DEF:="${PROJ_NAME}admin"}
+# JBoss共通管理ユーザ共通パスワードの設定
+JBOSS_ADMIN_PASSWORD_DEF=${JBOSS_ADMIN_PASSWORD_DEF:="${PROJ_NAME}pass"}
 
 #--------------------------------
 # top directory of all instance
@@ -124,6 +157,7 @@ HTTPD_PORT_HTTPS_BASE="( $HTTPD_PORT_HTTPS_DEF + $HTTPD_PORT_OFFSET )"
 #######################
 PG_SERVER_NAME=127.0.0.1
 PG_SERVER_PORT=5432
+# PostgreSQL接続ユーザ共通パスワードの設定
 PG_DB_USER_PASSWORD_DEF=${PG_DB_USER_PASSWORD_DEF:="pgpass"}
 PG_DB_USER_PASSWORD="$PG_DB_USER_PASSWORD_DEF"
 
@@ -148,4 +182,3 @@ DATE_TIME_FMT="+%Y-%m%d-%H%M-%S";
 # TOOL_HOME=${TOOL_HOME:="/home/hmizuno/work/git/installer/new_arch"}
 # TOOL_BIN=$TOOL_HOME/bin
 # PATH=$TOOL_BIN:$PATH
-
