change : 	PG_SERVER_NAME config in common_static.env
FIX:
	common_static.env into installer-package.tar

--- a/common.env
+++ b/common.env
@@ -155,7 +155,7 @@ HTTPD_PORT_HTTPS_BASE="( $HTTPD_PORT_HTTPS_DEF + $HTTPD_PORT_OFFSET )"
 #######################
 # PostgreSQL
 #######################
-PG_SERVER_NAME=127.0.0.1
+PG_SERVER_NAME=${PG_SERVER_NAME:="127.0.0.1"}
 PG_SERVER_PORT=5432
 # PostgreSQL接続ユーザ共通パスワードの設定
 PG_DB_USER_PASSWORD_DEF=${PG_DB_USER_PASSWORD_DEF:="pgpass"}
