change : 	ENV_LIST into common.env

--- a/common.env
+++ b/common.env
@@ -162,6 +162,13 @@ PG_DB_USER_PASSWORD_DEF=${PG_DB_USER_PASSWORD_DEF:="pgpass"}
 PG_DB_USER_PASSWORD="$PG_DB_USER_PASSWORD_DEF"
 
 #
+# pg_hba.conf host entory format
+#
+# host <DB_name> <USER_name> <hostname>/0 md5
+PG_HBA_HOST_ENTRY_FMT="host %s %s %s/0 md5"
+
+# 
+#
 # firewalld base configuration
 #
 # defined in /usr/lib/firewalld/services/ directory
@@ -171,10 +178,24 @@ FIREWALL_BASE_CONF_COMMON="ftp ssh";
 FIREWALL_BASE_CONF_DIR="/usr/lib/firewalld/services";
 FIREWALL_CONF_DIR="/etc/firewalld/services";
 
+############################
+# internal config
+############################
 #
 # date time format for date command
 #
 DATE_TIME_FMT="+%Y-%m%d-%H%M-%S";
+
+#
+# directory name in env.base/ and conf.base used by mkenv and mkconf 
+#
+ENV_LIST=${ENV_LIST:="
+	os
+	httpd
+	jboss
+	systemctl.httpd
+	systemctl.jboss
+"};
 
 #
 # future config
