add comment : common.env

--- a/common.env
+++ b/common.env
@@ -14,7 +14,7 @@ then
 fi
 
 #--------------------------------
-# 
+#
 # デフォルト値設定ファイルの読み込み順番
 # (最初に設定・読み込まれた値が優先される。）
 #
@@ -80,7 +80,7 @@ JBOSS_ADMIN_PASSWORD_DEF=${JBOSS_ADMIN_PASSWORD_DEF:="${PROJ_NAME}pass"}
 #--------------------------------
 # top directory of all instance
 #
-#   <
+#   REPO_DIR/
 #       <instance_1>/
 #           env/
 #           conf/
@@ -167,7 +167,7 @@ PG_DB_USER_PASSWORD="$PG_DB_USER_PASSWORD_DEF"
 # host <DB_name> <USER_name> <hostname>/0 md5
 PG_HBA_HOST_ENTRY_FMT="host %s %s %s/0 md5"
 
-# 
+#
 #
 # firewalld base configuration
 #
@@ -187,7 +187,7 @@ FIREWALL_CONF_DIR="/etc/firewalld/services";
 DATE_TIME_FMT="+%Y-%m%d-%H%M-%S";
 
 #
-# directory name in env.base/ and conf.base used by mkenv and mkconf 
+# directory name in env.base/ and conf.base used by mkenv and mkconf
 #
 ENV_LIST=${ENV_LIST:="
 	os
