add : firewall "serverprotect" in all server. change : Java mx size 1024 -> 2560 change : JBoss instance name <instname>A --> project_name FIX : sysctl-all :   problem : setup & clean command call sysctl cmd twice by httpd and jboss.   fix : problem : setup & clean command call sysctl cmd only one with $kind

--- a/common.env
+++ b/common.env
@@ -176,9 +176,9 @@ PG_HBA_HOST_ENTRY_FMT="host %s %s %s/0 md5"
 # firewalld base configuration
 #
 # defined in /usr/lib/firewalld/services/ directory
-FIREWALL_BASE_CONF_AP="ftp ssh";
-FIREWALL_BASE_CONF_DB="ftp ssh nfs postgresql";
-FIREWALL_BASE_CONF_COMMON="ftp ssh";
+FIREWALL_BASE_CONF_COMMON="ftp ssh serverprotect";
+FIREWALL_BASE_CONF_AP="$FIREWALL_BASE_CONF_COMMON";
+FIREWALL_BASE_CONF_DB="$FIREWALL_BASE_CONF_COMMON nfs postgresql";
 FIREWALL_BASE_CONF_DIR="/usr/lib/firewalld/services";
 FIREWALL_CONF_DIR="/etc/firewalld/services";
 
